moved wiki to cms

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
         <div class="page">
             <div class="header">
                 <div class="navigation">
+                    <a href="">Home</a>
+                    <a href="">Wiki</a>
+                    <a href="">Galery</a>
                 </div>
             </div>
             <div class="content">
