--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -33,6 +33,23 @@ a {
     color: #888888;
     }
 
+.page > .header > .navigation {
+    float: right;
+    margin: 0px 20px 0px 0px;
+    padding: 10px 8px 10px 8px;
+
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+
+    background: -webkit-gradient(linear, left 0%, left 100%, from(rgba(250, 250, 250, .9)), to(rgba(200, 200, 200, .8)));
+
+    -webkit-box-shadow: 0px 0px 5px rgba(1, 1, 1, .7);
+
+    color: #555555;
+    font-size: 1.1em;
+    word-spacing: .5em;
+    }
+
 .footer {
     margin: 0px 5px 0px 5px;
     padding-top: 15px;
