--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,9 @@
         <div class="page">
             <div class="header">
                 <div class="navigation">
-                    <a href="">Home</a>
-                    <a href="">Wiki</a>
-                    <a href="">Galery</a>
+                    {% for page in pages %}
+                        <a href="{{ page.destination }}">{{ page.title }}</a>
+                    {% endfor %}
                 </div>
             </div>
             <div class="content">
