--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -18,14 +18,14 @@ a img {
     border: 0;
 }
 
-.page {
+#page {
     width: 1000px;
     margin: 0px auto 0px auto;
 
     background-image: url(/static/images/background.png);
     }
 
-.page > .header {
+#page > #header {
     height: 118px;
     margin: 0px 5px 0px 5px;
 
@@ -37,24 +37,39 @@ a img {
     color: #888888;
     }
 
-.page > .header > .navigation {
+#page > #header > #navigation {
     float: right;
     margin: 0px 20px 0px 0px;
     padding: 10px 8px 10px 8px;
 
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+    -moz-border-radius-bottomleft: 5px;
+    -moz-border-radius-bottomright: 5px;
+    -webkit-border-bottom-left-radius: 5px;
+    -webkit-border-bottom-right-radius: 5px;
 
     background: -webkit-gradient(linear, left 0%, left 100%, from(rgba(250, 250, 250, .9)), to(rgba(200, 200, 200, .8)));
+    background: -moz-linear-gradient(top center, rgba(250, 250, 250, .9), rgba(200, 200, 200, .8));
 
     -webkit-box-shadow: 0px 0px 5px rgba(1, 1, 1, .7);
+    -moz-box-shadow: 0px 0px 5px rgba(1, 1, 1, .7);
 
     color: #555555;
     font-size: 1.1em;
     word-spacing: .5em;
-    }
+}
 
-.footer {
+#page > #header > #navigation li{
+    float: left;
+    margin-right: 10px;
+    margin-left: 10px;
+    list-style-type: none;
+}
+
+#page > #header > #navigation li a:hover {
+    text-decoration: underline;
+}
+
+#footer {
     margin: 0px 5px 0px 5px;
     padding-top: 15px;
 
@@ -66,7 +81,7 @@ a img {
     color: #888888;
     }
 
-.content {
+#content {
     float: left;
     width: 720px;
     min-height: 300px;
@@ -87,7 +102,7 @@ a img {
     width: 225px;
     }
 
-.end {
+#end {
     width: 1000px;
     height: 15px;
     margin: 0px auto 0px auto;
